ie fix for scrollbars showing up

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,6 +1,5 @@
 /* - - - - - - - - - - Basic Reset - - - - - - - - - - */
 .gt-region {
-  overflow-y: scroll;
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
